# JobLens

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/role_classifier/: classification_report.json  metrics.json  run_metadata.json
artifacts/salary_model/: metrics.json
configs/: config.yaml  skills.yaml
data/samples/: vacancies_sample.csv
reports/: role_classifier_model_card.md  salary_model_card.md
scripts/: evaluate_models.py  generate_sample_data.py  prepare_data.py  train_role_classifier.py  train_salary_model.py
src/joblens/: __init__.py  schemas.py  settings.py
src/joblens/api/: main.py
src/joblens/data/: cleaning.py  labeling.py  loading.py  validation.py
src/joblens/features/: salary.py  skills.py  text.py
src/joblens/matching/: __init__.py  matcher.py
src/joblens/models/: __init__.py  evaluation.py  persistence.py  role_classifier.py  salary_regressor.py
src/joblens/service/: __init__.py  inference.py
src/joblens/ui/: __init__.py  app.py
tests/: test_api.py  test_cleaning.py  test_labeling.py  test_matching.py  test_skills.py  test_training_smoke.py
