[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joblens-ml"
version = "0.1.0"
description = "End-to-end ML service for Russian IT vacancies and resume matching"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
dependencies = [
  "pandas>=2.0", "numpy>=1.24", "scikit-learn>=1.3", "scipy>=1.10",
  "joblib>=1.3", "PyYAML>=6.0", "pydantic>=2.0", "fastapi>=0.110",
  "uvicorn[standard]>=0.23", "streamlit>=1.30", "requests>=2.31", "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.25", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
